--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,3 @@
-backend_url =your backend url
-sentiment_analyzer_url=your code engine deployment url
+BACKEND_URL=http://localhost:3030
+SENTIMENT_ANALYZER_URL=https://sentianalyzer.1jv1vr3kppbk.us-east.codeengine.appdomain.cloud/
+
